# nexus

./: .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  pyproject.toml
.forgejo/workflows/: ci.yml
.github/workflows/: claude.yml  codex-review.yml  gemini-review.yml  pr-checks.yml
.playwright/: cli.config.json
agents/code-agent/: CLAUDE.md
agents/security-agent/: CLAUDE.md
dashboard/: .env.example  .npmrc  CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
dashboard/src/: _theme.scss  main.tsx  routeTree.gen.ts
docs/: paperclip-vs-nexus.md
docs/adr/: 0001-paperclip-no-go.md  0002-internal-board-layer.md  0003-runtime-adapter-contract.md  0004-python-asyncio-daemon.md  0005-workflow-engine.md  0006-three-tier-execution.md  0007-spa-dashboard.md  0008-homelab-runner.md
docs/development/: atrium-api-contract.md  conventions.md  nexus-vision.md  nexus-vs-paperclip.md
docs/headless-execution/: claude-cli-headless.md
src/nexus/: __init__.py  adapter_base.py  agent_loader.py  budget.py  cli.py  daemon.py  events.py  models.py  scheduler.py
tests/: conftest.py  test_adapter_base.py
tests/test_adapters/: test_claude_adapter.py  test_codex_adapter.py  test_http_adapter.py  test_openai_adapter.py  test_process_adapter.py  test_registry.py
tests/test_integration/: test_code_agent_e2e.py
tests/test_validation/: test_headless_output.py
tests/unit/: test_agent_loader.py  test_budget.py  test_claude_sdk_helpers.py  test_cli_api.py  test_cli_sync_agents.py  test_daemon_startup.py  (+4 more)
(+43 files in other folders)
